[update]editアクションは不要だったので削除
