# app/controllers/api/v1/communication_notebooks_controller.rb
@@ -63,12 +63,6 @@ class Api::V1::CommunicationNotebooksController < ApplicationController
     end
   end
 
-  def edit
-    target_date = params[:target_date]
-    new_date = target_date.slice(0..9)
-    communication_notebook = CommunicationNotebook.where("date like?", "#{new_date}%")
-    render json: communication_notebook
-  end
   private
 
   def communication_notebook_params
