# config/routes.rb
@@ -1,10 +1,8 @@
 Rails.application.routes.draw do
-  # devise_for :kids
   namespace 'api' do
     namespace 'v1' do
       resources :kids do
         get '/communication_notebooks/doesExist', to: 'communication_notebooks#doesExist'
-        get '/communication_notebooks/edit', to: 'communication_notebooks#edit'
         get '/communication_notebooks/registration', to: 'communication_notebooks#registration'
         resources :communication_notebooks
       end
