# swagger.yml
@@ -140,31 +140,7 @@ paths:
           description: "該当する連絡帳が見つからない"
           schema:
             $ref: '#/definitions/404Error'
-  /kid/:id/communication_notebooks/edit:
-    get:
-      tags:
-      - "communication_notebooks"
-      summary: "ある日付の連絡帳を取得"
-      description: ""
-      parameters:
-        - name: kid_id
-          in: path
-          description: 子供のID
-          required: true
-          type: integer
-          format: int32
-        - name: target_date
-          in: query
-          type: string
-          description: 過去に登録した連絡帳の日付
-          required: true
-      responses:
-          200:
-            description: 登録済みの連絡帳のレコード取得
-            schema:
-              $ref: '#/definitions/Communication_notebook'
-          400:
-            description: 日付が選択されていない
+
 definitions:
   Communication_notebook:
     type: object
